<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/registration"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:text="@string/registration_hint"
        android:textSize="30sp" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/registration">

        <RadioButton
            android:id="@+id/roleAdmin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/roleAdmin" />

        <RadioButton
            android:id="@+id/roleReader"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/roleReader" />
    </RadioGroup>

    <EditText
        android:id="@+id/txtLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/txtLogin"
        android:layout_below="@+id/radioGroup"
        android:layout_marginTop="10sp"
        android:textSize="18sp"/>

    <EditText
        android:id="@+id/txtPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints="password"
        android:hint="@string/txtPassword"
        android:layout_below="@+id/txtLogin"
        android:inputType="textPassword"
        android:layout_marginTop="10sp"
        android:textSize="18sp"/>

    <Button
        android:id="@+id/btnRegister"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtPassword"
        android:layout_marginTop="250dp"
        android:layout_marginStart="10sp"
        android:layout_marginEnd="10sp"
        android:layout_marginBottom="10sp"
        android:textSize="18sp"
        android:text="@string/btnRegister" />

    <Button
        android:id="@+id/btnBack"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtPassword"
        android:layout_marginTop="300sp"
        android:layout_marginStart="10sp"
        android:layout_marginEnd="10sp"
        android:layout_marginBottom="10sp"
        android:text="@string/btnBack"
        android:textSize="18sp" />

</RelativeLayout>